[package]
name = "outboxd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
zbus = { workspace = true, default-features = false, features = ["tokio"] }
uuid = { workspace = true, features = ["v4"] }
