[package]
name = "outboxd"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
http-body-util.workspace = true
uuid = { workspace = true, features = ["v4"] }
listenfd.workspace = true
futures.workspace = true
